Build 8
- Fixed regressions introduced in Build 7 [Crashes & Not showing update notification]